# VLM-Batch-Deployment

./: .gitignore  Makefile  NOTES.md  README.md  pyproject.toml
infra/: main.tf  terraform.tfvars  variables.tf
llm/: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  NOTES.md  README.md  pyproject.toml
llm/infra/: terraform.tfvars  variables.tf
llm/notebooks/: test_vllm.ipynb
llm/scripts/: download_docs.py
llm/src/: inference.py
llm/src/llm/: __init__.py  __main__.py  parser.py  prompts.py  schemas.py  settings.py
llm/src/llm/data/: docs.py
llm/src/llm/parser/: main.py  schemas.py  test_vlllm.py
src/llm/: __main__.py  settings.py
src/llm/parser/: main.py  prompts.py  schemas.py
