[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "huggingface-hub[cli]>=0.30.1",
    "outlines[vllm]>=0.2.3",
    "pillow>=11.1.0",
    "transformers==4.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm"]
